# ecommerce-ad-ml_title_generator_keyword_finder

./: .env  .gitignore  README.md  amazon_scraper.py  dockerfile  engine.py  main.py  preprocess.py  pyproject.toml  ragengine.py  requirements.txt  train_model.py
.github/workflows/: ci.yml
data/processed/: final_dataset.csv
data/raw/: ALL_CATEGORIES_20260323_0957.json  ALL_CATEGORIES_20260323_0957_keywords.csv  ALL_CATEGORIES_20260323_0957_products.csv  ALL_CATEGORIES_20260324_1313.json  ALL_CATEGORIES_20260324_1313_keywords.csv  ALL_CATEGORIES_20260324_1313_products.csv  beauty_20260323_0953.json  beauty_20260323_0953_keywords.csv  beauty_20260323_0953_products.csv  beauty_20260324_1244.json  beauty_20260324_1244_keywords.csv  beauty_20260324_1244_products.csv  body_care_20260323_0956.json  body_care_20260323_0956_keywords.csv  body_care_20260323_0956_products.csv  body_care_20260324_1303.json  body_care_20260324_1303_keywords.csv  body_care_20260324_1303_products.csv  books_20260323_0954.json  books_20260323_0954_keywords.csv  books_20260323_0954_products.csv  books_20260324_1249.json  books_20260324_1249_keywords.csv  books_20260324_1249_products.csv  clothing_women_20260323_0954.json  clothing_women_20260323_0954_keywords.csv  clothing_women_20260323_0954_products.csv  clothing_women_20260324_1254.json  clothing_women_20260324_1254_keywords.csv  clothing_women_20260324_1254_products.csv  electronics_20260323_0952.json  electronics_20260323_0952_keywords.csv  electronics_20260323_0952_products.csv  electronics_20260324_1239.json  (+62 more)
models/: best_model.pkl
(+49 files in other folders)
